# xkaftar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md
backend/: .env.example  .env.production.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_push_device_tokens.py  0003_user_bio.py  0004_chat_member_notifications_enabled.py  0005_message_kind.py  0006_user_sessions_revoked_at.py  0007_normalize_message_kind_values.py  0008_fix_system_user_email.py  0009_message_client_id_idempotency.py  0010_message_reactions.py  0011_single_reaction_per_user.py  0012_message_video_url.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: admin.py  auth.py  chats.py  devices.py  integrations.py  users.py  utils.py  websocket.py
backend/app/core/: logging.py  security.py  settings.py
backend/app/db/: models.py  repositories.py  session.py
backend/app/domain/: enums.py
backend/app/schemas/: admin.py  auth.py  chat.py  devices.py
backend/app/services/: auth.py  chats.py  exceptions.py  notifications.py  push_notifications.py  realtime.py  serializers.py  storage.py  voice.py
backend/scripts/: broadcast_system_message.py  change_user_password.py  delete_user.py
backend/tests/: test_auth_and_chat.py
flutter-client/: .gitignore  README.md  pubspec.yaml
flutter-client/android/: gradle.properties
flutter-client/lib/: main.dart
flutter-client/linux/: CMakeLists.txt
flutter-client/scripts/: build_android_release.bat  run_android.bat  (+3 more)
(+52 files in other folders)
