[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messenger-backend"
version = "0.1.0"
description = "Backend API for a messenger application"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "uvicorn[standard]>=0.35.0,<0.36.0",
  "sqlalchemy>=2.0.41,<2.1.0",
  "asyncpg>=0.30.0,<0.31.0",
  "alembic>=1.16.0,<1.17.0",
  "pydantic-settings>=2.10.0,<2.11.0",
  "pyjwt>=2.10.1,<2.11.0",
  "argon2-cffi>=25.1.0,<25.2.0",
  "email-validator>=2.2.0,<2.3.0",
  "greenlet>=3.2.3,<3.3.0",
  "python-multipart>=0.0.20,<0.0.21",
  "httpx>=0.28.1,<0.29.0",
  "livekit-api>=1.0.3,<1.1.0",
  "firebase-admin>=6.9.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<8.5.0",
  "pytest-asyncio>=1.0.0,<1.1.0",
  "httpx>=0.28.1,<0.29.0",
  "aiosqlite>=0.21.0,<0.22.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
